# Template_Django

./: README.md  env-exemplo.txt  pyproject.toml  router.py
config/: settings.py  urls.py
core/sendEmail/: apps.py  views.py
core/user/: admin.py  apps.py  forms.py  managers.py  router.py
core/user/migrations/: 0001_initial.py
core/user/models/: user.py
core/user/serializers/: user.py
core/user/views/: user.py
